# sklearn-tabpfn-ext

./: CHANGELOG.md  CONTEXT.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: documentation-consistency-audit.md  ecosystem-positioning.md
sklearn_tabpfn_ext/: __init__.py  adaptive_quantile.py  base.py  categorical.py  codec.py  constant_filter.py  differentiable_znorm.py  exceptions.py  fingerprint.py  input_sanitizer.py  kdi_with_nan.py  ordinal_encoder.py  pipeline.py  polynomial_features.py  quantile_svd.py  registry.py  safe_power.py  schema.py  shuffle.py  squashing_scaler.py
sklearn_tabpfn_ext/composite/: __init__.py  column_transformer.py  feature_union.py  function_transformer.py  sequential.py
sklearn_tabpfn_ext/sklearn_wrappers/: __init__.py  simple_imputer.py  standard_scaler.py  truncated_svd.py
sklearn_tabpfn_ext/tabpfn/: __init__.py  translate.py
tests/: test_acceptance.py  test_base_mixin.py  test_categorical_e2e.py  test_categorical_random_mappings.py  test_codec.py  test_codec_child_attrs.py  test_column_transformer_order_preserving.py  test_fingerprint_codec_roundtrip.py  test_fingerprint_v64.py  test_input_sanitizer.py  test_input_sanitizer_codec.py  test_no_pickle.py  test_op_id_canonical.py  test_ordinal_encoder.py  test_ordinal_encoder_empty.py  test_parity.py  test_pipeline_sanitizer.py  test_registry.py  test_schema.py  test_smoke.py  test_source_meta_provenance.py  test_state_roundtrip_existing.py  test_state_roundtrip_new_custom.py  test_state_roundtrip_new_thin.py  test_state_roundtrip_sklearn_wrappers.py  test_subset_preprocessing.py  test_wrapper_from_sklearn.py
tests/composite/: test_column_transformer.py  test_feature_union.py  test_function_transformer.py  test_sequential.py
tests/fixtures/: fingerprint_v64_expected.json
tools/: cross_impl_parity_check.py
