[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn-tabpfn-ext"
version = "0.1.0"
description = "Serializable, sklearn-compatible TabPFN preprocessing operators (shared by vldm + ldmkit)"
license = {text = "Apache-2.0"}
authors = [{name = "sklearn-tabpfn-ext contributors"}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.6,<1.7",
    "numpy>=1.26,<3",
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
tabpfn = ["tabpfn>=6.3.2,<6.5"]
dev = ["pytest>=8,<9", "ruff>=0.6"]

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["sklearn_tabpfn_ext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "tabpfn: requires the optional tabpfn dependency (install via .[tabpfn])",
    "gpu_ladder: end-to-end parity tests requiring a fitted TabPFN pickle (set VLDM_TABPFN_BINARY_PICKLE)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N803", "N806", "RUF001", "RUF002", "RUF003"]
